# jamhash

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  smhasher3_jamhash.txt
.github/workflows/: ci.yml  publish.yml
benches/: benchmarks.rs
examples/: basic.rs
src/: lib.rs
